Displayed wallet status and cart dropdown on the header of the page

--- a/index.html
+++ b/index.html
@@ -19,12 +19,20 @@
         </div>
             <ul>
                 <li class="link">
-                    <a href="#">Products</a>
+                    <a href="#">Your Wallet: <span id="wallet"></span></a>
                 </li>
-                <li class="link">
-                    <a href="#"><span class="cart-icon">Cart</span></a>
+                <li>
+                    <div class="cart-icon">
+                        <img src="assets/shopping-bag.svg" class="shopping-icon"/>
+                        <span class="item-count">0</span>
+                    </div>
                 </li>
             </ul>
+            <div class='cart-dropdown'>
+                <div class='cart-items'>
+                </div>
+                <button class="custom-btn dropdown-btn">GO TO CHECKOUT</button>
+            </div>
     </section>
 
     <!-- Product List -->
