Implemented checkoutHandler which deducts the sum of products from the wallet, and modal to show appropriate message to the user

--- a/index.html
+++ b/index.html
@@ -31,9 +31,18 @@
             <div class='cart-dropdown'>
                 <div class='cart-items'>
                 </div>
-                <button class="custom-btn dropdown-btn">GO TO CHECKOUT</button>
+                <button class="dropdown-btn">CHECKOUT</button>
+                <div class="total-price"></div>
             </div>
     </section>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <p>Transaction passed successfully</p>
+            <button class="modal-btn">&times;</button>
+        </div>
+    </div>
 
     <!-- Product List -->
     <section class="products">
