Implemented some more styling and tried to implement deleteItemFromCart handler

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                 </li>
             </ul>
-            <div class='cart-dropdown'>
+            <div class='cart-dropdown closed'>
                 <div class='cart-items'>
                 </div>
                 <button class="dropdown-btn">CHECKOUT</button>
